Fix read_email functionality issues
- Fix data structure inconsistency in getEmailContent response
- Fix URL checking logic for inbox navigation
- Support both #inbox and #all views for email searching

--- a/gmail-mcp-extension/extension/popup.html
+++ b/gmail-mcp-extension/extension/popup.html
@@ -90,6 +90,7 @@
     <button id="test-emails">Test Get Emails</button>
     <button id="test-send">Test Send Email</button>
     <button id="test-search">Test Search Emails</button>
+    <button id="inject-script">Inject Content Script</button>
     <button id="debug-page">Debug Gmail Page</button>
   </div>
   
